force-app/main/default/objects/Setup_Assistant_Data__c/Setup_Assistant_Data__c.object-meta.xml
<CustomObject>
    <label>Setup Assistant Data</label>
    <nameField>
        <label>Setup Assistant Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setup Assistant Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>