force-app/main/default/objects/Setup_Assistant_Data__c/fields/Donation_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Donation_Stage_Name__c</fullName>
    <label>Donation Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>