force-app/main/default/objects/Setup_Assistant_Data__c/fields/Refund_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Refund_Stage_Name__c</fullName>
    <label>Refund Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>