force-app/main/default/objects/Setup_Assistant_Data__c/fields/Steps_Completed__c.field-meta.xml
<CustomField>
    <fullName>Steps_Completed__c</fullName>
    <label>Steps Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>